infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-pod
  template:
    metadata:
      labels:
        app: auth-pod
    spec:
      containers:
        - name: auth
          image: jeldikk/ticketing-auth
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-port-service
spec:
  type: NodePort
  selector:
    app: auth-pod
  ports:
    - name: auth
      protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-ip-service
spec:
  type: ClusterIP
  selector:
    app: auth-pod
  ports:
    - name: auth
      protocol: TCP
      port: 4000
      targetPort: 4000
