infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: ticketing.dev
    http:
      paths:
        - pathType: Prefix
          path: /api/users/signup
          backend:
            service:
              name: auth-ip-service
              port: 
                number: 4000

        - pathType: Prefix
          path: /api/users/signin
          backend:
            service:
              name: auth-ip-service
              port:
                number: 4000

        - pathType: Prefix
          path: /api/users/signout
          backend:
            service:
              name: auth-ip-service
              port:
                number: 4000

        - pathType: Prefix
          path: /api/users/?(.*)
          backend:
            service:
              name: auth-ip-service
              port:
                number: 4000
